# erg

./: .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  FUNDING.yml  LICENSE  LICENSE-APACHE  README.md  README_JA.md  README_zh-CN.md  README_zh-TW.md  SECURITY.md  THIRD_PARTY_CREDITS.md  TODO.md  build.rs  bump_version.er  cargo_publish.bat  cargo_publish.sh  default.nix  flake.nix  lib  shell.nix  treefmt.toml
compiler/erg_common/: Cargo.toml  astr.rs  build.rs  cache.rs  codeobj.rs  color.rs  combinations.rs  config.rs  consts.rs  datetime.rs  deserialize.rs  dict.rs  env.rs  erg_util.rs  error.rs  free.rs  fresh.rs  fxhash.rs  help_messages.rs  lang.rs  lazy.rs  lazy_buffer.rs  levenshtein.rs  lib.rs  macros.rs  opcode.rs  opcode310.rs  opcode311.rs  opcode38.rs  python_util.rs  rccell.rs  serialize.rs  set.rs  spawn.rs  stdin.rs  str.rs  style.rs  traits.rs  tsort.rs  tty.rs  (+4 more)
compiler/erg_compiler/: Cargo.toml  README.md  artifact.rs  build.rs  build_hir.rs  builder.rs  check.rs  checker.rs  codegen.rs  compile.rs  context.rs  declare.rs  desugar_hir.rs  effectcheck.rs  error.rs  eval.rs  global.rs  hir.rs  index.rs  initialize.rs  lib.rs  link.rs  lower.rs  main.rs  mod_cache.rs  name_resolve.rs  optimize.rs  ownercheck.rs  reorder.rs  transpile.rs  varinfo.rs
compiler/erg_compiler/context/: cache.rs  compare.rs  eval.rs  generalize.rs  hint.rs  initialize.rs  inquire.rs  instantiate.rs  mod.rs  register.rs  test.rs  tyvar.rs  unify.rs
compiler/erg_compiler/error/: eval.rs  lower.rs  mod.rs  tycheck.rs
compiler/erg_compiler/linter/: README.md  lint.rs
compiler/erg_compiler/module/: global.rs  graph.rs  index.rs  mod.rs
compiler/erg_compiler/std/: _erg_std_prelude.py  _prelude.er  prelude.py
compiler/erg_compiler/tests/: infer_arr.er  test.rs
compiler/erg_compiler/ty/: codeobj.rs  constructors.rs  deserialize.rs  free.rs  mod.rs  predicate.rs  typaram.rs  value.rs
compiler/erg_parser/: Cargo.toml  ast.rs  build_ast.rs  builder.rs  convert.rs  desugar.rs  error.rs  lex.rs  lib.rs  main.rs  parse.rs  reorder.rs  token.rs  typespec.rs
compiler/erg_parser/tests/: ast_example.txt  comment.er  containers.er  desugar_param_pat.er  failed_str_lit.er  for.er  invalid_chunk.er  multi_line_str_literal.er  parse_test.rs  simple_if.er  stack.er  stream.er  test.rs  test1_basic_syntax.er  test2_advanced_syntax.er  test3_literal_syntax.er  tokenize_test.rs
compiler/erg_type/: Cargo.toml  codeobj.rs  constructors.rs  deserialize.rs  free.rs  lib.rs  typaram.rs  value.rs
crates/els/: .gitignore  Cargo.toml  README.md  call_hierarchy.rs  channels.rs  code_action.rs  code_lens.rs  command.rs  completion.rs  definition.rs  diagnostics.rs  diff.rs  doc_highlight.rs  doc_link.rs  file_cache.rs  folding_range.rs  hir_visitor.rs  hover.rs  implementation.rs  inlay_hint.rs  lib.rs  main.rs  message.rs  references.rs  rename.rs  scheduler.rs  selection_range.rs  semantic.rs  server.rs  sig_help.rs  symbol.rs  type_definition.rs  util.rs
crates/els/doc/: code_action.md  features.md
crates/els/tests/: a.er  b.er  c.er  imports.er  invalid_syntax.er  retrigger.er  test.rs  tolerant_completion.er
crates/erg_common/: Cargo.toml  build.rs  cache.rs  complex.rs  config.rs  consts.rs  dict.rs  env.rs  erg_util.rs  error.rs  fresh.rs  fxhash.rs  help_messages.rs  imag.rs  input.rs  io.rs  lang.rs  levenshtein.rs  lib.rs  macros.rs  opcode.rs  opcode308.rs  opcode309.rs  opcode310.rs  opcode311.rs  opcode312.rs  pathutil.rs  python_util.rs  random.rs  ratio.rs  serialize.rs  set.rs  shared.rs  spawn.rs  stdin.rs  str.rs  style.rs  traits.rs  triple.rs  tsort.rs  (+2 more)
crates/erg_compiler/: .gitignore  Cargo.toml  README.md  artifact.rs  build.rs  build_hir.rs  build_package.rs  codegen.rs  compile.rs  declare.rs  desugar_hir.rs  effectcheck.rs  hir.rs  lib.rs  link.rs  link_ast.rs  link_hir.rs  lint.rs  lower.rs  main.rs  optimize.rs  ownercheck.rs  plan.rs  reorder.rs  transpile.rs  varinfo.rs
crates/erg_compiler/context/: compare.rs  eval.rs  generalize.rs  hint.rs  inquire.rs  instantiate.rs  instantiate_spec.rs  mod.rs  register.rs  test.rs  unify.rs
crates/erg_compiler/error/: eval.rs  lower.rs  mod.rs  tycheck.rs
crates/erg_compiler/lib/: .gitignore  LICENCE  README.md
crates/erg_compiler/module/: cache.rs  errors.rs  global.rs  graph.rs  impls.rs  index.rs  mod.rs  promise.rs
crates/erg_compiler/tests/: dependent.er  example.py  infer.er  test.rs
crates/erg_compiler/ty/: codeobj.rs  const_subr.rs  constructors.rs  deserialize.rs  free.rs  mod.rs  predicate.rs  typaram.rs  value.rs  vis.rs
crates/erg_formatter/: Cargo.toml  README.md
crates/erg_formatter/doc/: architecture.md
crates/erg_formatter/src/: format.rs  lib.rs  main.rs  transform.rs
crates/erg_linter/: Cargo.toml  README.md  lib.rs  lint.rs  mod.rs  warn.rs
crates/erg_parser/: Cargo.toml  README.md  ast.rs  build_ast.rs  convert.rs  desugar.rs  error.rs  lex.rs  lib.rs  main.rs  parse.rs  token.rs  typespec.rs  visitor.rs
crates/erg_parser/tests/: args.er  ast_example.txt  comment.er  containers.er  dependent.er  desugar_param_pat.er  failed_str_lit.er  for.er  hello_world.er  invalid_chunk.er  invalid_class_definition.er  invalid_collections.er  multi_line_str_literal.er  parse_test.rs  simple_if.er  starless_mul.er  (+7 more)
crates/erg_proc_macros/: Cargo.toml
crates/molc/: Cargo.toml  README.md
crates/stokes/: Cargo.toml  README.md  generator.rs  lib.rs  main.rs
src/compiler/: .gitignore  Cargo.toml  codegen.rs  compile.rs  effectcheck.rs  error.rs  eval.rs  hir.rs  initialize.rs  lib.rs  lower.rs  main.rs  optimize.rs  ownercheck.rs  table.rs  varinfo.rs
src/erg_common/: Cargo.toml  cache.rs  codeobj.rs  deserialize.rs  dict.rs  lazy.rs  lazy_buffer.rs  macros.rs  python_util.rs  rccell.rs  serialize.rs  traits.rs  tsort.rs  ty.rs
src/erg_compiler/: Cargo.toml  README.md  codegen.rs  compile.rs  context.rs  effectcheck.rs  error.rs  eval.rs  hir.rs  initialize.rs  lib.rs  lower.rs  ownercheck.rs  table.rs  varinfo.rs
(+1745 files in other folders)
