[package]
name = "erg"
version = "0.6.0-beta.2"
description = "The Erg programming language"
authors = ["erg-lang team <moderation.erglang@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/erg-lang/erg"
documentation = "https://docs.rs/erg"
homepage = "https://erg-lang.org/"
keywords = ["erg", "programming-language"]

[workspace]
members = [
    "compiler/erg_common",
    "compiler/erg_compiler",
    "compiler/erg_parser",
]

[workspace.package]
version = "0.6.0-beta.2"
authors = ["erg-lang team <moderation.erglang@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/erg-lang/erg"
homepage = "https://erg-lang.org/"

[features]
# when "debug" feature is turned on, that of the following crates will also be turned on.
debug = ["erg_common/debug", "erg_parser/debug", "erg_compiler/debug"]
japanese = [
    "erg_common/japanese",
    "erg_parser/japanese",
    "erg_compiler/japanese",
]
simplified_chinese = [
    "erg_common/simplified_chinese",
    "erg_parser/simplified_chinese",
    "erg_compiler/simplified_chinese",
]
traditional_chinese = [
    "erg_common/traditional_chinese",
    "erg_parser/traditional_chinese",
    "erg_compiler/traditional_chinese",
]
unicode = ["erg_common/unicode", "erg_parser/unicode", "erg_compiler/unicode"]
pretty = ["erg_common/pretty", "erg_parser/pretty", "erg_compiler/unicode"]
pre-commit = []
large_thread = [
    "erg_common/large_thread",
    "erg_parser/large_thread",
    "erg_compiler/large_thread"
]

[dependencies]
erg_common = { version = "0.6.0-beta.2", path = "./compiler/erg_common" }
erg_parser = { version = "0.6.0-beta.2", path = "./compiler/erg_parser" }
erg_compiler = { version = "0.6.0-beta.2", path = "./compiler/erg_compiler" }

[lib]
path = "src/lib.rs"

# [profile.release]
# panic = 'abort'
