[package]
name = "erg_common"
description = "A common components library of Erg"
documentation = "http://docs.rs/erg_common"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true


[features]
debug = []
japanese = []
simplified_chinese = []
traditional_chinese = []
unicode = []
pretty = []

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }
[target.'cfg(target_os = "hermit")'.dependencies]
hermit-abi = "0.1.6"
[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["consoleapi"]

[lib]
path = "lib.rs"
