[package]
name = "erg_compiler"
description = "Centimetre: the Erg compiler"
documentation = "http://docs.rs/erg_compiler"
build = "build.rs"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# when "debug" feature is turned on, that of parser will also be turned on.
debug = ["erg_common/debug", "erg_parser/debug"]
japanese = ["erg_common/japanese", "erg_parser/japanese"]
simplified_chinese = [
    "erg_common/simplified_chinese",
    "erg_parser/simplified_chinese",
]
traditional_chinese = [
    "erg_common/traditional_chinese",
    "erg_parser/traditional_chinese",
]

[dependencies]
erg_common = { version = "0.5.9-nightly.6", path = "../erg_common" }
erg_parser = { version = "0.5.9-nightly.6", path = "../erg_parser" }

[lib]
path = "lib.rs"

[[bin]]
name = "cm"
path = "main.rs"
