[package]
name = "erg_parser"
description = "The Erg parser"
documentation = "http://docs.rs/erg_parser"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
debug = ["erg_common/debug"]
japanese = ["erg_common/japanese"]
simplified_chinese = ["erg_common/simplified_chinese"]
traditional_chinese = ["erg_common/traditional_chinese"]

[dependencies]
erg_common = { version = "0.5.11-nightly.3", path = "../erg_common" }

[lib]
path = "lib.rs"

[[bin]]
name = "ergp"
path = "main.rs"
