[package]
name = "erg_type"
version = "0.2.8"
description = "APIs for Erg types"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/erg-lang/erg/tree/main/compiler/erg_type"
documentation = "https://docs.rs/erg_type"
homepage = "https://erg-lang.github.io/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
japanese = []
simplified_chinese = []
traditional_chinese = []
