[package]
name = "els"
description = "An Erg compiler frontend for IDEs, implements LSP."
documentation = "http://docs.rs/els"
version = "0.1.31"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
debug = ["erg_common/debug", "erg_compiler/debug"]
japanese = ["erg_common/japanese", "erg_compiler/japanese"]
simplified_chinese = ["erg_common/simplified_chinese", "erg_compiler/simplified_chinese"]
traditional_chinese = ["erg_common/traditional_chinese", "erg_compiler/traditional_chinese"]
unicode = ["erg_common/unicode", "erg_compiler/unicode"]
pretty = ["erg_common/pretty", "erg_compiler/pretty"]
large_thread = ["erg_common/large_thread", "erg_compiler/large_thread"]
py_compat = ["erg_compiler/py_compat"]
experimental = ["erg_common/experimental", "erg_compiler/experimental"]

[dependencies]
erg_common = { workspace = true, features = ["els"] }
erg_compiler = { workspace = true, features = ["els"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
lsp-types = { version = "0.93.2", features = ["proposed"] }

[dev-dependencies]
gag = "1"

[lib]
path = "lib.rs"

[[bin]]
name = "els"
path = "main.rs"
