[package]
name = "els"
description = "An Erg compiler frontend for IDEs, implements LSP."
documentation = "http://docs.rs/els"
version = "0.1.62-nightly.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
debug = ["erg_common/debug", "erg_compiler/debug", "molc/debug"]
japanese = ["erg_common/japanese", "erg_compiler/japanese"]
simplified_chinese = ["erg_common/simplified_chinese", "erg_compiler/simplified_chinese"]
traditional_chinese = ["erg_common/traditional_chinese", "erg_compiler/traditional_chinese"]
unicode = ["erg_common/unicode", "erg_compiler/unicode"]
pretty = ["erg_common/pretty", "erg_compiler/pretty"]
large_thread = ["erg_common/large_thread", "erg_compiler/large_thread"]
py_compat = ["erg_compiler/py_compat"]
experimental = ["erg_common/experimental", "erg_compiler/experimental"]
backtrace = ["erg_common/backtrace", "molc/debug"]
lint = ["dep:erg_linter"]

[dependencies]
erg_common = { workspace = true, features = ["els"] }
erg_compiler = { workspace = true, features = ["els"] }
erg_linter = { workspace = true, optional = true }
molc = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
lsp-types = { version = "0.93.2", features = ["proposed"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading"] }

[dev-dependencies]
erg_proc_macros = { workspace = true }

[lib]
path = "lib.rs"

[[bin]]
name = "els"
path = "main.rs"
