[package]
name = "erg_common"
description = "A common components library of Erg"
documentation = "http://docs.rs/erg_common"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
debug = ["dep:backtrace-on-stack-overflow"]
backtrace = ["dep:backtrace-on-stack-overflow"]
japanese = []
simplified_chinese = []
traditional_chinese = []
unicode = []
pretty = []
large_thread = []
els = []
py_compat = []
no_std = []
full-repl = ["dep:crossterm"]
experimental = []

[target.'cfg(unix)'.dependencies]
backtrace-on-stack-overflow = { version = "0.3.0", optional = true }

[dependencies]
crossterm = { optional = true, version = "0.25.0" }
parking_lot = "0.12"
thread_local = "1.1"

[lib]
path = "lib.rs"
