[package]
name = "erg_compiler"
description = "Centimetre: the Erg compiler"
documentation = "http://docs.rs/erg_compiler"
build = "build.rs"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# when "debug" feature is turned on, that of parser will also be turned on.
debug = ["erg_common/debug", "erg_parser/debug"]
japanese = ["erg_common/japanese", "erg_parser/japanese"]
simplified_chinese = [
    "erg_common/simplified_chinese",
    "erg_parser/simplified_chinese",
]
traditional_chinese = [
    "erg_common/traditional_chinese",
    "erg_parser/traditional_chinese",
]
unicode = [
    "erg_common/unicode",
    "erg_parser/unicode",
]
pretty = [
    "erg_common/pretty",
    "erg_parser/pretty"
]
large_thread = [
    "erg_common/large_thread",
    "erg_parser/large_thread",
]
py_compat = ["erg_common/py_compat"]
els = ["erg_common/els"]
no_std = ["erg_common/no_std"]
full-repl = ["erg_common/full-repl"]

[dependencies]
erg_common = { workspace = true, path = "../erg_common" }
erg_parser = { workspace = true, path = "../erg_parser" }

[build-dependencies]
erg_common = { workspace = true, path = "../erg_common" }

[lib]
path = "lib.rs"

[[bin]]
name = "cm"
path = "main.rs"
