[package]
name = "erg_formatter"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["erg_common/debug", "erg_parser/debug"]

[dependencies]
erg_common = { workspace = true }
erg_parser = { workspace = true }

[[bin]]
name = "ergfmt"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
