[package]
name = "erg_parser"
description = "The Erg parser"
documentation = "http://docs.rs/erg_parser"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["parallel"]
debug = ["erg_common/debug"]
japanese = ["erg_common/japanese"]
simplified_chinese = ["erg_common/simplified_chinese"]
traditional_chinese = ["erg_common/traditional_chinese"]
unicode = ["erg_common/unicode"]
pretty = ["erg_common/pretty"]
large_thread = ["erg_common/large_thread"]
experimental = ["erg_common/experimental"]
pylib = ["dep:pyo3", "erg_common/pylib"]
pylib_parser = ["pylib"]
log-level-error = ["erg_common/log-level-error"]
parallel = ["erg_common/parallel"]

[dependencies]
erg_common = { workspace = true }
erg_proc_macros = { workspace = true }
unicode-xid = "0.2.4"
pyo3 = { workspace = true, optional = true }

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[[bin]]
name = "ergp"
path = "main.rs"
