[package]
name = "erg_proc_macros"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erg_common = { workspace = true }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
