[package]
name = "erg_compiler"
version = "0.1.0"
description = "Centimetre: the Erg compiler"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
# when "debug" feature is turned on, that of parser will also be turned on.
debug = [ "erg_common/debug", "erg_parser/debug" ]
japanese = [ "erg_common/japanese", "erg_parser/japanese" ]

[dependencies]
erg_common = { version = "0.1.0", path = "../erg_common" }
erg_parser = { version = "0.1.0", path = "erg_parser" }

[lib]
path = "lib.rs"

[[bin]]
name = "cm"
path = "main.rs"
