[package]
name = "erg_parser"
version = "0.1.0"
description = "The Erg parser"
authors = ["mtshiba <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
debug = [ "erg_common/debug" ]
japanese = [ "erg_common/japanese" ]

[dependencies]
erg_common = { version = "0.1.0", path = "../../erg_common" }

[lib]
path = "lib.rs"

[[bin]]
name = "ergp"
path = "main.rs"
